--- a/src/styles/quiz-card/quiz-card.html
+++ b/src/styles/quiz-card/quiz-card.html
@@ -1,8 +1,13 @@
-<section class="card">
-  <h2 class="card__question">Question</h2>
-  <button class="card__button">Show answer</button>
-  <p class="card__answer">This is a long answer!</p>
-  <ul class="card__tag-list">
+<section class="quiz-card">
+  <div
+    role="button"
+    class="quiz-card__bookmark quiz-card__bookmark--selected"
+    aria-label="Add bookmark"
+  ></div>
+  <h2 class="quiz-card__question">Question</h2>
+  <button class="quiz-card__button">Show answer</button>
+  <p class="quiz-card__answer">This is a long answer!</p>
+  <ul class="quiz-card__tag-list">
     <li>CSS</li>
     <li>HTML</li>
     <li>Storybook</li>
