--- a/src/bookmark.html
+++ b/src/bookmark.html
@@ -3,35 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz App</title>
+    <title>Bookmark</title>
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header class="app-header">
-      <h1 class="app-header__heading">Quiz App</h1>
+      <h1 class="app-header__heading">Bookmark</h1>
     </header>
     <main class="app-main">
       <section class="quiz-card">
         <div
           role="button"
           class="quiz-card__bookmark quiz-card__bookmark--selected"
-          aria-label="Add bookmark"
-        ></div>
-        <h2 class="quiz-card__question">Question</h2>
-        <button class="quiz-card__button">Show answer</button>
-        <p class="quiz-card__answer">This is a long answer!</p>
-        <ul class="quiz-card__tag-list">
-          <li>CSS</li>
-          <li>HTML</li>
-          <li>Storybook</li>
-        </ul>
-      </section>
-
-      <section class="quiz-card">
-        <div
-          role="button"
-          class="quiz-card__bookmark"
           aria-label="Add bookmark"
         ></div>
         <h2 class="quiz-card__question">Question</h2>
