--- a/src/styles/navigation/navigation.html
+++ b/src/styles/navigation/navigation.html
@@ -1,3 +1,8 @@
-<header class="app-header">
-  <h1 class="app-header__heading">HTML Title</h1>
-</header>
+<footer>
+  <nav class="navigation">
+    <a class="navigation__link" href="/">Home</a>
+    <a class="navigation__link" href="/bookmark.html">Bookmark</a>
+    <a class="navigation__link" href="/profile.html">Profile</a>
+    <a class="navigation__link" href="/create.html">Create</a>
+  </nav>
+</footer>
