Change styling of quiz-app and navigation

--- a/src/styles/quiz-card/quiz-card.html
+++ b/src/styles/quiz-card/quiz-card.html
@@ -4,9 +4,10 @@
     class="quiz-card__bookmark quiz-card__bookmark--selected"
     aria-label="Add bookmark"
   ></div>
-  <h2 class="quiz-card__question">Question</h2>
+  <h2 class="quiz-card__question">Question:</h2>
+  <p class="quiz-card__text">What is CSS?</p>
   <button class="quiz-card__button">Show answer</button>
-  <p class="quiz-card__answer">This is a long answer!</p>
+  <p class="quiz-card__text">This is a long answer!</p>
   <ul class="quiz-card__tag-list">
     <li>CSS</li>
     <li>HTML</li>
