--- a/src/styles/navigation/navigation.html
+++ b/src/styles/navigation/navigation.html
@@ -1,6 +1,7 @@
 <nav class="navigation">
-  <a class="navigation__link" href="/">Home</a>
-  <a class="navigation__link" href="/bookmark.html">Bookmark</a>
-  <a class="navigation__link" href="/profile.html">Profile</a>
-  <a class="navigation__link" href="/create.html">Create</a>
+  <button class="navigation__link navigation__link--active js-home-button">
+    Home
+  </button>
+  <button class="navigation__link js-bookmark-button">Bookmark</button>
+  <button class="navigation__link js-create-button">Create</button>
 </nav>
