Rename selectors with js-prefix

--- a/src/index.html
+++ b/src/index.html
@@ -9,26 +9,28 @@
     <script defer type="module" src="./index.js"></script>
   </head>
   <body>
-    <header class="app-header page-home-header">
+    <header class="app-header js-page-home-header">
       <h1 class="app-header__heading">Quiz App</h1>
     </header>
-    <header class="app-header page-bookmark-header hidden">
+    <header class="app-header js-page-bookmark-header hidden">
       <h1 class="app-header__heading">Bookmark</h1>
     </header>
-    <header class="app-header page-create-header hidden">
+    <header class="app-header js-page-create-header hidden">
       <h1 class="app-header__heading">Create Cards</h1>
     </header>
 
-    <main class="app-main page-home">
+    <main class="app-main js-page-home">
       <section class="quiz-card">
         <div
           role="button"
-          class="quiz-card__bookmark quiz-card__bookmark--selected"
+          class="quiz-card__bookmark quiz-card__bookmark--selected js-quiz-card-bookmark"
           aria-label="Add bookmark"
         ></div>
         <h2 class="quiz-card__question">Question:</h2>
         <p class="quiz-card__text">What is CSS?</p>
-        <button class="quiz-card__button">Show answer</button>
+        <button class="quiz-card__button js-quiz-card-button">
+          Show answer
+        </button>
         <p class="quiz-card__text js-quiz-card-answer hidden">
           This is a long answer!
         </p>
@@ -74,7 +76,7 @@
       </section>
     </main>
 
-    <main class="app-main page-bookmark hidden">
+    <main class="app-main js-page-bookmark hidden">
       <section class="quiz-card">
         <div
           role="button"
@@ -110,7 +112,7 @@
       </section>
     </main>
 
-    <main class="page-create hidden">
+    <main class="js-page-create hidden">
       <form class="form">
         <label>
           Add a question:
